--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   app:
     build: .
-    container_name: junos-app
+    container_name: cmg-app
     env_file:
       - .env
     expose:
