--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,10 @@
 APP_HOST=localhost
 APP_PORT=8080
 
+AWS_REGION=region-name
+AWSLOGS_GROUP=logs-group-name
+AWSLOGS_STREAM=logs-stream-name
+
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=db
