--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,12 @@ services:
         awslogs-region: "${AWS_REGION}"
         awslogs-group: "${AWSLOGS_GROUP}"
         awslogs-stream: "${AWSLOGS_STREAM}"
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    depends_on:
+      - app
